// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entity list component should render with add link when passed in props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="entity_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="entity_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <br />
    <a
      class="govuk-body govuk-link"
      href="/case/1234/stage/5678/entity/entity/add"
    >
      Add a entity
    </a>
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      />
    </table>
  </fieldset>
</div>
`;

exports[`Entity list component should render with additional when passed in props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset my-css-class"
    id="entity_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="entity_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <br />
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      />
    </table>
  </fieldset>
</div>
`;

exports[`Entity list component should render with default props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="entity_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="entity_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <br />
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      />
    </table>
  </fieldset>
</div>
`;

exports[`Entity list component should render with error when passed in props 1`] = `
<div
  class="govuk-form-group govuk-form-group--error"
>
  <fieldset
    class="govuk-fieldset "
    id="entity_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="entity_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <span
      class="govuk-error-message"
      id="entity_list-error"
    >
      Validation has failed
    </span>
    <br />
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      />
    </table>
  </fieldset>
</div>
`;

exports[`Entity list component should render with hint when passed in props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="entity_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="entity_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <span
      class="govuk-form-hint"
    >
      Select one of the below entities
    </span>
    <br />
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      />
    </table>
  </fieldset>
</div>
`;

exports[`Entity list component should render with label when passed in props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="entity_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="entity_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      >
        Test entity list
      </span>
    </legend>
    <br />
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      />
    </table>
  </fieldset>
</div>
`;

exports[`Entity list component should render with remove link when passed in props 1`] = `
<div
  class="govuk-form-group"
>
  <fieldset
    class="govuk-fieldset "
    id="entity_list"
  >
    <legend
      class="govuk-fieldset__legend"
      id="entity_list-legend"
    >
      <span
        class="govuk-fieldset__heading govuk-label--s"
      />
    </legend>
    <br />
    <table
      class="govuk-table"
    >
      <tbody
        class="govuk-table__body"
      >
        <tr
          class="govuk-radios govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <div
              class="govuk-radios__item"
            >
              <input
                checked=""
                class="govuk-radios__input"
                id="entity_list-CHOICE_A"
                name="entity_list"
                type="radio"
                value="CHOICE_A"
              />
              <label
                class="govuk-label govuk-radios__label"
                for="entity_list-CHOICE_A"
              >
                Choice A
              </label>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          >
            <a
              class="govuk-link"
              href="/case/1234/stage/5678/entity/entity/CHOICE_A/remove"
            >
              Remove
            </a>
          </td>
        </tr>
        <tr
          class="govuk-radios govuk-table__row"
        >
          <td
            class="govuk-table__cell"
          >
            <div
              class="govuk-radios__item"
            >
              <input
                class="govuk-radios__input"
                id="entity_list-CHOICE_B"
                name="entity_list"
                type="radio"
                value="CHOICE_B"
              />
              <label
                class="govuk-label govuk-radios__label"
                for="entity_list-CHOICE_B"
              >
                Choice B
              </label>
            </div>
          </td>
          <td
            class="govuk-table__cell"
          >
            <a
              class="govuk-link"
              href="/case/1234/stage/5678/entity/entity/CHOICE_B/remove"
            >
              Remove
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </fieldset>
</div>
`;
